# Projetos-IA-Aplicacoes

./: README.md  docker-compose.yml  pyproject.toml
ia_nutricionista/: .gitignore  README.md  pyproject.toml
ia_nutricionista/nutritionist/: app.py
ia_nutricionista/nutritionist/agent/: nutritionist.py
ia_nutricionista/nutritionist/agents/: nutritionist.py
ia_nutricionista/nutritionist/chat/: memory.py  telegram.py
ia_nutricionista/nutritionist/models/: diet_plan.py  report.py  user.py
ia_nutricionista/nutritionist/repositories/: base_repository.py  diet_plan.py  meal_entry.py  report.py  user.py  weight_history.py
ia_nutricionista/nutritionist/tools/: diet_plain_tool.py  food_analyser_tool.py  meal_entry_tool.py  report_tool.py  user_info_tool.py  user_registration_tool.py  weight_update_tool.py
