[project]
name = "projetos-ia-aplicacoes"
version = "0.1.0"
description = ""
authors = [
    {name = "Davi Emanuel"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
